--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,12 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <!--<div id="root"></div>-->
+    <h1> Web Development </h1>
+    <ul>
+      <li><a href = "labs/a1/index.html">Assignment 1</a></li>
+      <li><a href = "tuiter/navigation.html">Tuiter</a></li>
+    </ul>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
