--- a/public/tuiter/edit-profile.html
+++ b/public/tuiter/edit-profile.html
@@ -27,7 +27,7 @@
             <h2> Edit Profile</h2>
 
             <a href="profile.html">Save</a>
-            <img src="bannerimage.jpeg" height="200" style="width:100%;">
+            <img src="bannerimage.jpeg" height="200">
             <input type="file" />
             <br/>
             <img src="ownerimg.jpg" width="48" height="48">
