--- a/public/tuiter/profile.html
+++ b/public/tuiter/profile.html
@@ -31,7 +31,7 @@
 
             <!--Banner image-->
 
-            <img src="bannerimage.jpeg" height="200" style="width:100%;">
+            <img src="bannerimage.jpeg" height="200">
 
             <!--Profile picture-->
 
