--- a/public/tuiter/home.html
+++ b/public/tuiter/home.html
@@ -9,7 +9,7 @@
         <td style="vertical-align: top;">
             <h2> Navigation </h2>
             <ul>
-                <li><a href = "home.html">Home</a></li>
+                <li><a href = "home.html"><b>Home</b></a></li>
                 <li><a href = "">Explore</a></li>
                 <li><a href = "">Notifications</a></li>
                 <li><a href = "">Messages</a></li>
