--- a/public/tuiter/profile.html
+++ b/public/tuiter/profile.html
@@ -17,7 +17,7 @@
                     <li><a href = "">Messages</a></li>
                     <li><a href = "">Bookmarks</a></li>
                     <li><a href = "">Lists</a></li>
-                    <li><a href = "profile.html">Profile</a></li>
+                    <li><a href = "profile.html"><b>Profile</b></a></li>
                     <li><a href = "tuiter.html">Tuit</a></li>
                     <li><a href = "">Reply</a></li>
                 </ul>
