--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,7 @@
     <h1> Web Development </h1>
     <ul>
       <li><a href = "labs/a1/index.html">Assignment 1</a></li>
+      <li><a href = "labs/a2/index.html">Assignment 2</a></li>
       <li><a href = "tuiter/navigation.html">Tuiter</a></li>
     </ul>
     <!--
