--- a/public/tuiter/navigation.html
+++ b/public/tuiter/navigation.html
@@ -2,7 +2,7 @@
 
 <ul>
     <li><a href = "home.html">Home</a></li>
-    <li><a href = "">Explore</a></li>
+    <li><a href = "explore/explore-css.html">Explore (CSS)</a></li>
     <li><a href = "">Notifications</a></li>
     <li><a href = "">Messages</a></li>
     <li><a href = "">Bookmarks</a></li>
