--- a/public/tuiter/navigation.html
+++ b/public/tuiter/navigation.html
@@ -3,9 +3,10 @@
 <ul>
     <li><a href = "home.html">Home</a></li>
     <li><a href = "explore/explore-css.html">Explore (CSS)</a></li>
+    <li><a href="explore/index.html">Explore</a></li>
     <li><a href = "">Notifications</a></li>
     <li><a href = "">Messages</a></li>
-    <li><a href = "">Bookmarks</a></li>
+    <li><a href = "bookmarks/bookmarks-css.html">Bookmarks</a></li>
     <li><a href = "">Lists</a></li>
     <li><a href = "profile.html">Profile</a></li>
     <li><a href = "tuiter.html">Tuit</a></li>
