--- a/public/tuiter/explore/index.html
+++ b/public/tuiter/explore/index.html
@@ -6,6 +6,12 @@
     <link href="index.css" rel="stylesheet"/>
 </head>
 <body>
+    <div class="d-block d-sm-none fa-2x">XS</div>
+    <div class="d-none d-sm-block d-md-none fa-2x">S</div>
+    <div class="d-none d-md-block d-lg-none fa-2x">M</div>
+    <div class="d-none d-lg-block d-xl-none fa-2x">L</div>
+    <div class="d-none d-xl-block d-xxl-none fa-2x">XL</div>
+    <div class="d-none d-xxl-block fa-2x">XXL</div>
     <div class="container gap-3">
         <div class="row flex-nowrap">
             <div div class="col-2">
